deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jun-nginx-ingress
  labels:
    app: nginx-app
  namespace: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: jun-nginx-ingress
  namespace: nginx-app
spec:
  ports:
  - name: nginx-svc-port
    port: 80
    targetPort: 80
  selector:
    app: nginx-app
