ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jun-nginx-ingress
  namespace: nginx-app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devmonitor.dreamline.co.kr
    secretName: newdev
  rules:
  - host: devmonitor.dreamline.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jun-nginx-ingress
            port:
              number: 80
